ABC Technologies/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc-technologies
  namespace: abc-technologies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: abc-technologies
  template:
    metadata:
      labels:
        app: abc-technologies
    spec:
      containers:
        - name: abc-technologies
          image: abc-technologies:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/data
              name: storage
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 20
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: abc-technologies-pvc
